03_infrastructure/dashboard/ingress/overlays/dev/ingressroute-patch.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  routes:
    - match: Host(`dashboard.host.k3d.internal`)
      kind: Rule
      services:
        - name: dashboard-gatekeeper
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-tls
spec:
  routes:
    - match: Host(`dashboard.host.k3d.internal`)
      kind: Rule
      services:
        - name: dashboard-gatekeeper
          port: 3000
